--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="lib" path="ext-lib/httpcore-4.0-beta3.jar"/>
+	<classpathentry kind="lib" path="ext-lib/httpclient-4.0-beta2.jar"/>
+	<classpathentry kind="lib" path="ext-lib/winstone-0.9.10.jar"/>
+	<classpathentry kind="lib" path="ext-lib/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="output" path="web/WEB-INF/classes"/>
 </classpath>
