--- a/.classpath
+++ b/.classpath
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="ext-lib/httpcore-4.0-beta3.jar"/>
 	<classpathentry kind="lib" path="ext-lib/httpclient-4.0-beta2.jar"/>
 	<classpathentry kind="lib" path="ext-lib/winstone-0.9.10.jar"/>
 	<classpathentry kind="lib" path="ext-lib/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry kind="output" path="web/WEB-INF/classes"/>
 </classpath>
