--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
-.src-files.lst
-.settings
-installer/ccouch-install.properties
-jar
-junk*
-src.unused
-test.unused
-web/WEB-INF/classes
-web/repo-config
-ContentCouch.jar
+/junk*
+/temp
+/.src-files.lst
+/.settings
+/installer/ccouch-install.properties
+/jar
+/src.unused
+/test.unused
+/web/WEB-INF/classes
+/web/repo-config
+/ContentCouch.jar
+*~
